--- a/styles/style.css
+++ b/styles/style.css
@@ -501,3 +501,92 @@ div.posts{
   background: #bb0000;
   color: white;
 }
+.bods{
+  margin: 0;
+  padding: 0;
+  min-height: 50vh;
+  background: #ebf5fc;
+  display: flex;
+  justify-content: center;
+  box-sizing: border-box;
+  align-items:center;
+  font-family: 'Poppins', sans-serif;
+  }
+  
+  .bods .container{
+      min-height: 100vh;
+      position: relative;
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      flex-wrap: wrap;
+  }
+  
+  .bods .container .card {
+      width: 320px;
+      margin: 20px;
+      height: 320px;
+      padding: 40px 30px;
+      background: #ebf5fc;
+      border-radius: 40px;
+      box-shadow: -6px -6px 20px rgba(255,255,255,1),
+                  6px 6px 20px rgba(0,0,0,0.1);
+      cursor: pointer;
+  
+  }
+  
+  .bods .container .card:hover{
+      box-shadow: inset -6px -6px 10px rgba(255,255,255,0.5),
+                  inset 6px 6px 20px rgba(0,0,0,0.05);
+  }
+  
+  .bods .container .card .imgBx{
+      position: relative;
+      text-align: center;      
+  }
+  
+  .bods .container .card .imgBx img{
+      max-width: 120px;
+  }
+  
+  .bods .container .card .contentBx{
+      position: relative;
+      margin-top: 20px;
+      text-align: center;
+  
+  }
+  
+  .bods .container .card .contentBx h2{
+      color: #32a3b1;
+      font-weight: 700;
+      font-size: 1.4em;
+      letter-spacing: 2px;
+  }
+  
+  .bods .container .card .contentBx a{
+      display: inline-block;
+      padding: 10px 20px;
+      margin-top:15px;
+      border-radius: 40px;
+      color: #32a3b1;
+      font-size: 16px;
+      text-decoration: none;
+      box-shadow: -4px -4px 15px rgba(255,255,255,1),
+                  4px 4px 15px rgba(0,0,0,0.1);
+  }
+  
+  .bods .container .card .contentBx a:hover{
+      box-shadow: -4px -4px 15px rgba(255,255,255,0.5),
+                  4px 4px 15px rgba(0,0,0,0.05);
+  }
+  
+  .bods .container .card a:hover span{
+      display: block;
+      transform: scale(0.98);
+  }
+  
+  .bods .container .card:hover .imgBx
+  .bods .container .card:hover .contentBx
+  {
+      transform: scale(0.98);
+  }
