New Skills added

--- a/styles/style.css
+++ b/styles/style.css
@@ -590,3 +590,13 @@ div.posts{
   {
       transform: scale(0.98);
   }
+
+  .float-container{
+    padding: 20px;
+  }
+
+  .float-child{
+    width: 50%;
+    float: left;
+    padding: 20px;
+  }
