--- a/_includes/body.html
+++ b/_includes/body.html
@@ -148,28 +148,36 @@
             <div class="w3-light-grey w3-round-xlarge w3-small">
                 <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:100%">100%</div>
             </div><br>
+            <h5 style="text-align: center;">Native HANA/ABAP on HANA</h5>
+            <div class="w3-light-grey w3-round-xlarge w3-small">
+                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:90%">100%</div>
+            </div><br>
             <h5 style="text-align: center;">Machine Learning and Deep Learning</h5>
             <div class="w3-light-grey w3-round-xlarge w3-small">
                 <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:90%">90%</div>
             </div><br>
             <h5 style="text-align: center;">Python</h5>
             <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:80%">
-                    <div class="w3-center w3-text-white">80%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:90%">
+                    <div class="w3-center w3-text-white">90%</div>
                 </div>
             </div><br>
             <h5 style="text-align: center;">NodeJS</h5>
             <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:70%">
-                    <div class="w3-center w3-text-white">70%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:90%">
+                    <div class="w3-center w3-text-white">90%</div>
                 </div>
             </div><br>
             <h5 style="text-align: center;">Angular</h5>
             <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:70%">
-                    <div class="w3-center w3-text-white">70%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:90%">
+                    <div class="w3-center w3-text-white">90%</div>
                 </div>
-            </div>
+            </div><br>
+            <h5 style="text-align: center;">Flutter & Dart</h5>
+            <div class="w3-light-grey w3-round-xlarge w3-small">
+                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:80%">80%</div>
+            </div><br>
         </div>
     </div>
     <!-- endof Skills -->
