--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -13,5 +13,8 @@
         </div>
         <h3 class="contact__name">Gaurav Chaudhary</h3>
         <h4 class="contact__name">Developer</h4>
+        <div style="padding: 2.5rem;" >
+            <button class="resume contact__name" onclick="downloadResume()"> Download Resume </button>
+        </div>
 </div>
 </div>
