--- a/_includes/body.html
+++ b/_includes/body.html
@@ -26,6 +26,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/abap/">ABAP</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/grc/" >GRC</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -140,6 +143,10 @@
     <div style="position:relative;">
         <br><br>
         <div class="w3-container w3-white w3-margin-bottom" style="padding-right: 30%; padding-left: 30%;">
+            <h5 style="text-align: center;">GRC-Process Control( SME )</h5>
+            <div class="w3-light-grey w3-round-xlarge w3-small">
+                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:100%">100%</div>
+            </div><br>
             <h5 style="text-align: center;">ABAP</h5>
             <div class="w3-light-grey w3-round-xlarge w3-small">
                 <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:100%">100%</div>
