--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -31,6 +31,9 @@
                     <li id="idAbap" class="nav-item {% if page.url contains 'abap' %}active{% endif %}" >
                         <a class="nav-link" href="/abap/" >ABAP</a>
                     </li>
+                    <li id="idGrc" class="nav-item {% if page.url contains 'grc' %}active{% endif %}" >
+                        <a class="nav-link" href="/grc/" >GRC</a>
+                    </li>
                 </ul>
             </div>
         </div>
