--- a/_includes/body.html
+++ b/_includes/body.html
@@ -139,54 +139,86 @@
             <span class="border" style="background-color:transparent;font-size:25px;color: #f7f7f7;">SKILLS</span>
         </div>
     </div>
-
-    <div style="position:relative;">
-        <br><br>
-        <div class="w3-container w3-white w3-margin-bottom" style="padding-right: 30%; padding-left: 30%;">
-            <h5 style="text-align: center;">GRC-Process Control( SME )</h5>
-            <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:100%">100%</div>
-            </div><br>
-            <h5 style="text-align: center;">ABAP</h5>
-            <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:100%">100%</div>
-            </div><br>
-            <h5 style="text-align: center;">UI5/Fiori</h5>
-            <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:100%">100%</div>
-            </div><br>
-            <h5 style="text-align: center;">Native HANA/ABAP on HANA</h5>
-            <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:90%">100%</div>
-            </div><br>
-            <h5 style="text-align: center;">Machine Learning and Deep Learning</h5>
-            <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:90%">90%</div>
-            </div><br>
-            <h5 style="text-align: center;">Python</h5>
-            <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:90%">
-                    <div class="w3-center w3-text-white">90%</div>
+    <div class="skills-row">
+        <div class="skills-column">
+            <div style="position:relative;">
+                <br><br>
+                <div class="w3-container w3-white w3-margin-bottom" style="padding-right: 30%; padding-left: 30%;">
+                    <h5 style="text-align: center;">GRC-Process Control( SME )</h5>
+                    <div class="w3-light-grey w3-round-xlarge w3-small">
+                        <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:100%">100%</div>
+                    </div><br>
+                    <h5 style="text-align: center;">ABAP</h5>
+                    <div class="w3-light-grey w3-round-xlarge w3-small">
+                        <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:100%">100%</div>
+                    </div><br>
+                    <h5 style="text-align: center;">UI5/Fiori</h5>
+                    <div class="w3-light-grey w3-round-xlarge w3-small">
+                        <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:100%">100%</div>
+                    </div><br>
+                    <h5 style="text-align: center;">Native HANA/ABAP on HANA</h5>
+                    <div class="w3-light-grey w3-round-xlarge w3-small">
+                        <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:90%">100%</div>
+                    </div><br>
+                    <h5 style="text-align: center;">Machine Learning and Deep Learning</h5>
+                    <div class="w3-light-grey w3-round-xlarge w3-small">
+                        <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:90%">90%</div>
+                    </div><br>
+                    <h5 style="text-align: center;">Python</h5>
+                    <div class="w3-light-grey w3-round-xlarge w3-small">
+                        <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:90%">
+                            <div class="w3-center w3-text-white">90%</div>
+                        </div>
+                    </div><br>
+                    <h5 style="text-align: center;">NodeJS</h5>
+                    <div class="w3-light-grey w3-round-xlarge w3-small">
+                        <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:90%">
+                            <div class="w3-center w3-text-white">90%</div>
+                        </div>
+                    </div><br>
+                    <h5 style="text-align: center;">Angular</h5>
+                    <div class="w3-light-grey w3-round-xlarge w3-small">
+                        <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:90%">
+                            <div class="w3-center w3-text-white">90%</div>
+                        </div>
+                    </div><br>
+                    <h5 style="text-align: center;">Flutter & Dart</h5>
+                    <div class="w3-light-grey w3-round-xlarge w3-small">
+                        <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:80%">80%</div>
+                    </div><br>
                 </div>
-            </div><br>
-            <h5 style="text-align: center;">NodeJS</h5>
-            <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:90%">
-                    <div class="w3-center w3-text-white">90%</div>
-                </div>
-            </div><br>
-            <h5 style="text-align: center;">Angular</h5>
-            <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:90%">
-                    <div class="w3-center w3-text-white">90%</div>
-                </div>
-            </div><br>
-            <h5 style="text-align: center;">Flutter & Dart</h5>
-            <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:80%">80%</div>
-            </div><br>
+            </div>
         </div>
-    </div>
+        <div class="skills-column">
+            <div style="position:relative;">
+                <br><br>
+                <div class="w3-container w3-white w3-margin-bottom" style="padding-right: 30%; padding-left: 30%;">
+                    <h5 style="text-align: center;">Core Data Services</h5>
+                    <div class="w3-light-grey w3-round-xlarge w3-small">
+                        <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:100%">100%</div>
+                    </div><br>
+                    <h5 style="text-align: center;">RESTful ABAP Programming</h5>
+                    <div class="w3-light-grey w3-round-xlarge w3-small">
+                        <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:100%">100%</div>
+                    </div><br>
+                    <h5 style="text-align: center;">Cloud Application Programming</h5>
+                    <div class="w3-light-grey w3-round-xlarge w3-small">
+                        <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:100%">100%</div>
+                    </div><br>
+                    <h5 style="text-align: center;">SAP Analytics on Cloud</h5>
+                    <div class="w3-light-grey w3-round-xlarge w3-small">
+                        <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:90%">100%</div>
+                    </div><br>
+                    <h5 style="text-align: center;">Fiori Mobile Services</h5>
+                    <div class="w3-light-grey w3-round-xlarge w3-small">
+                        <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:90%">90%</div>
+                    </div><br>                    
+                </div>
+            </div>
+        </div>
+      </div>
+    
+
     <!-- endof Skills -->
 
     <!-- Blogs -->
