--- a/_includes/body.html
+++ b/_includes/body.html
@@ -93,10 +93,22 @@
     <div class="w3-container w3-white w3-margin-bottom" style="padding-right: 30%; padding-left: 30%;">
         <h2 class="w3-text-grey w3-padding-16" style="text-align: center;">Work Experience</h2>
         <div class="w3-container">
+            <img src="images/seagate-logo.jpg" style="width: 80%;">
+            <h5 class="w3-opacity" style="text-align: center;"><b>Senior Developer</b></h5>
+            <h6 class="w3-text-grey" style="text-align:center;"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Feb
+                2021 - <span class="w3-tag w3-grey w3-round">Current</span> &nbsp&nbsp &nbsp&nbsp <i
+                    class='fa fa-building fa-fw w3-margin-right'></i>Seagate Technology</h6>
+            <p>This is altogether a new perspective for me, to be involved in lot of stuff. Architecural design for Seagate's SAP Network.
+                From licensing to implementation to usage, it is whole lot of exposure. I am grateful for this opportunity.
+            </p>
+            <hr>
+        </div>
+        
+        <div class="w3-container">
             <img src="images/sap.svg" style="width: 100%;">
             <h5 class="w3-opacity" style="text-align: center;"><b>Software Developer</b></h5>
             <h6 class="w3-text-grey" style="text-align:center;"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jul
-                2016 - <span class="w3-tag w3-grey w3-round">Current</span> &nbsp&nbsp &nbsp&nbsp <i
+                2016 - Jan 2021 &nbsp&nbsp &nbsp&nbsp <i
                     class='fa fa-building fa-fw w3-margin-right'></i>SAP Labs India Pvt. Ltd</h6>
             <p>This time, it is other side of the wall. Joined as a Developer. Altogether different experience. Got to
                 work on trending and fastly growing technologies like Machine Learning, Deeping learning, Artificial
@@ -201,13 +213,17 @@
                     <div class="w3-light-grey w3-round-xlarge w3-small">
                         <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:100%">100%</div>
                     </div><br>
+                    <h5 style="text-align: center;">Business Object Processing Framework</h5>
+                    <div class="w3-light-grey w3-round-xlarge w3-small">
+                        <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:100%">100%</div>
+                    </div><br>
                     <h5 style="text-align: center;">Cloud Application Programming</h5>
                     <div class="w3-light-grey w3-round-xlarge w3-small">
                         <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:100%">100%</div>
                     </div><br>
                     <h5 style="text-align: center;">SAP Analytics on Cloud</h5>
                     <div class="w3-light-grey w3-round-xlarge w3-small">
-                        <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:90%">100%</div>
+                        <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:100%">100%</div>
                     </div><br>
                     <h5 style="text-align: center;">Fiori Mobile Services</h5>
                     <div class="w3-light-grey w3-round-xlarge w3-small">
