--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -26,14 +26,11 @@
                         <a class="nav-link" href="/machinelearning/">Machine Learning</a>
                     </li>
                     <li id="idUI5" class="nav-item {% if page.url contains 'sapui5' %}active{% endif %}">
-                        <a class="nav-link" href="/sapui5/" >SAP UI5</a>
+                        <a class="nav-link" href="/sapui5/" >Fiori</a>
                     </li>
                     <li id="idAbap" class="nav-item {% if page.url contains 'abap' %}active{% endif %}" >
                         <a class="nav-link" href="/abap/" >ABAP</a>
-                    </li>
-                    <li id="idGrc" class="nav-item {% if page.url contains 'grc' %}active{% endif %}" >
-                        <a class="nav-link" href="/grc/" >GRC</a>
-                    </li>
+                    </li>                    
                 </ul>
             </div>
         </div>
