--- a/_includes/body.html
+++ b/_includes/body.html
@@ -21,14 +21,12 @@
                         <a class="nav-link" href="/machinelearning/">Machine Learning</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/sapui5/">SAP UI5</a>
+                        <a class="nav-link" href="/sapui5/">Fiori</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/abap/">ABAP</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/grc/" >GRC</a>
-                    </li>
+                    
                 </ul>
             </div>
         </div>
