--- a/_includes/body.html
+++ b/_includes/body.html
@@ -26,6 +26,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/abap/">ABAP</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/portfolio/">My Work</a>
+                    </li>
                     
                 </ul>
             </div>
