--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -30,7 +30,10 @@
                     </li>
                     <li id="idAbap" class="nav-item {% if page.url contains 'abap' %}active{% endif %}" >
                         <a class="nav-link" href="/abap/" >ABAP</a>
-                    </li>                    
+                    </li>    
+                    <li id="idAbap" class="nav-item {% if page.url contains 'portfolio' %}active{% endif %}" >
+                        <a class="nav-link" href="/portfolio/" >My Work</a>
+                    </li>                
                 </ul>
             </div>
         </div>
