--- a/_includes/body.html
+++ b/_includes/body.html
@@ -218,7 +218,7 @@
                     <div class="w3-light-grey w3-round-xlarge w3-small">
                         <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:100%">100%</div>
                     </div><br>
-                    <h5 style="text-align: center;">Cloud Application Programming</h5>
+                    <h5 style="text-align: center;">Cloud Application Programming(CF)</h5>
                     <div class="w3-light-grey w3-round-xlarge w3-small">
                         <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:100%">100%</div>
                     </div><br>
@@ -230,6 +230,11 @@
                     <div class="w3-light-grey w3-round-xlarge w3-small">
                         <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:90%">90%</div>
                     </div><br>                    
+                    <h5 style="text-align: center;">ReactJS</h5>
+                    <div class="w3-light-grey w3-round-xlarge w3-small">
+                        <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:90%">90%</div>
+                    </div><br>                    
+                                      
                 </div>
             </div>
         </div>
